Open-MX 1.3.901 (aka 1.4-rc1)
======================================

Major improvements from previous release:
* Rework the event delivery from the driver to the user-space library
  so as to reduce cache invalidation and locking.

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 1.3.4 (December 16th 2010)
==================================

Bug fixes:
* Fix check_kernel_headers.sh to properly execute as a shell script in
  a portable manner.
* Fix a possible memory corruption that could occur if an application's
  page gets swapped out right after receiving a large message.

Other improvements from previous release:
* Many interrupt-related clarifications in the FAQ.
* Don't have GPL headers in common/ contaminate the LGPL library.

Open-MX 1.3.3 (October 15th 2010)
=================================

Bug fixes:
* Make omx_set_error_handler() work before omx_init().
* Initialize the error handler early in omx_init() so as to use the
  normal error handler as soon possible.
* Do not mix expected and unexpected event queue full in the counters.

Other improvements from previous release:
* Update documentation about the switch from SVN to GIT.

Open-MX 1.3.2 (August 25th 2010, svn r3177)
===========================================
The no-kernel-thread release.

Bug fixes:
* Fix wire-compatibility with MX for medium messages by properly using
  the fragment pipeline log on the receive side.

Other improvements from previous release:
* Add OMX_RNDV_THRESHOLD environment variable to tune the eager/rendezvous
  threshold (32kB by default) for inter-node communication.
  + Add --with-medium-frags configure option to make the rendezvous
    threshold further tunable if needed.
* Add DKMS support to ease automatic rebuild of the kernel driver
  when a new kernel is installed, see the FAQ for details.
* Drop the open-mxd kernel thread in favor of deferred works and
  kernel timers.